2019-04-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pdb.c (WritePDBImage): Assure that input scanline is
	cleared in order to cover up some decoder bug.  May fix 14215
	"graphicsmagick/coder_PDB_fuzzer: Use-of-uninitialized-value in
	WritePDBImage", which I have not been able to reproduce.

	* magick/render.c (DrawPrimitive): Check primitive point x/y
	values for NaN.
	(DrawImage): Fix oss-fuzz issue 14173
	"graphicsmagick/coder_MVG_fuzzer: Integer-overflow in DrawImage".

	* magick/pixel_cache.c (SetNexus): Fix oss-fuzz issue 14208
	"graphicsmagick/coder_MVG_fuzzer: Integer-overflow in SetNexus".

2019-04-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/display.c: Add even more const declarations.

	* coders/mat.c (WriteMATLABImage): Add completely missing error
	handling.  Fixes SourceForge issue #604 "heap-buffer-overflow in
	function WriteMATLABImage of coders/mat.c".

2019-04-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pdb.c (WritePDBImage): Fix SourceForge issue #605
	"heap-buffer-overflow in function WritePDBImage of coders/pdb.c".

	* magick/widget.c: Add many const declarations.

	* magick/display.c: Incorporate and eliminate display.h. Add many
	const declarations.

	* magick/animate.c: Incorporate and eliminate animate.h. Add many
	const declarations.

2019-04-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wmf.c (ReadWMFImage): Reject WMF files with an empty
	bounding box.  Fixes SourceForge issue #606 "Division by Zero in
	coders/wmf.c".

2019-04-07  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* magick/nt_base.c Fix a problem of finding ghostscript fonts.
	Variable "font_dir" was useless and thus removed. No need to copy
	text multiple times.  Use const char gs_font_dir[] instead of
	pointer.

2019-04-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xwd.c (ReadXWDImage): Perform more header validations and
	a file size validation in order to reject files with bogus
	headers.