@@ -35,6 +35,16 @@
 <div class="document">
 
 
+<p>2019-04-14  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/xwd.c (ReadXWDImage): Add more XWD header validation
+logic.  Addresses problems noted by email from Hongxu Chen to the
+graphicsmagick-security mail alias on Sun, 14 Apr 2019 and
+entitled &quot;Multiple crashes (FPE and invalid read) when processing
+XWD files&quot;.</li>
+</ul>
+</blockquote>
 <p>2019-04-13  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
